030-software/fluxcd/apps/rustfs/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs
  annotations:
    dashboard.${domain}/name: rustfs
    dashboard.${domain}/url: https://rustfs.${domain}
    dashboard.${domain}/icon: bucket
spec:
  hostnames:
  - rustfs.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: rustfs
      port: 9001
    matches:
    - path:
        type: PathPrefix
        value: /
